# partner-xor

./: .gitignore  CMakeLists.txt  Makefile  README.md
example/: CMakeLists.txt  config.ini  heatdis.h  heatdis_combined.c
include/: checkpoint_utils.h  combined.h  common.h  globals.h  mpi_utils.h  naming_utils.h  recovery_utils.h  xor_struct.h
src/: CMakeLists.txt  checkpoint_utils.c  combined.c  common.c  common.h  extra.c  extra.h  ini.c  ini.h  mpi_utils.c  naming_utils.c  naming_utils.h  recovery_utils.c  recovery_utils.h  xor_struct.c  xor_struct.h
test/: heatdis_combined.c
tests/: CMakeLists.txt  combined_unit_test.c  config.ini  cp_rec_system.c  cp_rec_system.h  cp_recover_integration.c  cp_recover_integration.h  integration_test.c  multivar_unit_test.c  multivar_xor_cp_recover.c  multivar_xor_cp_recover.h  singlevar_unit_test.c  singlevar_xor_cp_recover.c  singlevar_xor_cp_recover.h  system_test.c  test_header.h  test_runner.sh  unit_test.c  xor_cp_recover.c  xor_cp_recover.h  xor_units.c  xor_units.h
